# joke-poc-mcp-server

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
logs/: .gitkeep
src/: __init__.py  config.py  server.py
